PolSourceTasks/src/objects/Edition__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book__c</fullName>
        <label>Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Editions</relationshipLabel>
        <relationshipName>Editions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Biographies</fullName>
                </value>
                <value>
                    <fullName>Autobiographies</fullName>
                </value>
                <value>
                    <fullName>Fantasy</fullName>
                </value>
                <value>
                    <fullName>Poetry</fullName>
                </value>
                <value>
                    <fullName>Encyclopedias</fullName>
                </value>
                <value>
                    <fullName>Dictionaries</fullName>
                </value>
                <value>
                    <fullName>Comics</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Cookbooks</fullName>
                </value>
                <value>
                    <fullName>Diaries</fullName>
                </value>
                <value>
                    <fullName>Journals</fullName>
                </value>
                <value>
                    <fullName>Prayer books</fullName>
                </value>
                <value>
                    <fullName>Series</fullName>
                </value>
                <value>
                    <fullName>Trilogy</fullName>
                </value>
                <value>
                    <fullName>Anthology</fullName>
                </value>
                <value>
                    <fullName>Drama</fullName>
                </value>
                <value>
                    <fullName>Action and Adventure</fullName>
                </value>
                <value>
                    <fullName>Romance</fullName>
                </value>
                <value>
                    <fullName>Mystery</fullName>
                </value>
                <value>
                    <fullName>Horror</fullName>
                </value>
                <value>
                    <fullName>Self help</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Guide</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Children&apos;s</fullName>
                </value>
                <value>
                    <fullName>Religion, Spirituality &amp; New Age</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Math</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cover__c</fullName>
        <label>Cover</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Soft</fullName>
                </value>
                <value>
                    <fullName>Hard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Edition</label>
    <nameField>
        <label>Edition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Editions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>